// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectTree should render component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c4 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c4.c4 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c4.c4 {
  color: #B0B5BD;
  cursor: default;
}

.c6 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c6 ::-ms-check {
  display: none;
}

.c6:disabled {
  cursor: default;
}

.c6:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c6:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c6:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:disabled:checked+div>span>svg {
  visibility: visible;
}

.c6:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c6:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c6:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c6:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c7 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c7 {
  width: 20px;
  height: 20px;
}

.c8 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c8.c8 {
  width: 32px;
  height: 32px;
}

.c9 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c9.c9 {
  width: 16px;
  height: 16px;
}

.c9 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c9.c9 *[fill^='#'] {
  fill: #E5E7EB;
}

.c10 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c5 {
  margin-right: 8px;
  flex-shrink: 0;
}

.c11 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <label
            class="c4 c5"
            data-field-id="1"
          >
            <input
              class="c6"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              />
              <span
                class="c9"
              >
                <div
                  aria-hidden="true"
                  class="c10"
                  focusable="false"
                />
              </span>
            </div>
          </label>
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <label
            class="c4 c5"
            data-field-id="2"
          >
            <input
              class="c6"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              />
              <span
                class="c9"
              >
                <div
                  aria-hidden="true"
                  class="c10"
                  focusable="false"
                />
              </span>
            </div>
          </label>
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c4 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c4.c4 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c4.c4 {
  color: #B0B5BD;
  cursor: default;
}

.c6 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c6 ::-ms-check {
  display: none;
}

.c6:disabled {
  cursor: default;
}

.c6:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c6:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c6:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:disabled:checked+div>span>svg {
  visibility: visible;
}

.c6:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c6:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c6:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c6:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c7 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c7 {
  width: 20px;
  height: 20px;
}

.c8 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c8.c8 {
  width: 32px;
  height: 32px;
}

.c9 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c9.c9 {
  width: 16px;
  height: 16px;
}

.c9 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c9.c9 *[fill^='#'] {
  fill: #E5E7EB;
}

.c10 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c5 {
  margin-right: 8px;
  flex-shrink: 0;
}

.c11 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <label
          class="c4 c5"
          data-field-id="1"
        >
          <input
            class="c6"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c7"
          >
            <div
              class="c8"
            />
            <span
              class="c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </span>
          </div>
        </label>
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <label
          class="c4 c5"
          data-field-id="2"
        >
          <input
            class="c6"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c7"
          >
            <div
              class="c8"
            />
            <span
              class="c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </span>
          </div>
        </label>
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectTree should render component with expanded lists 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c4 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c4.c4 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c4.c4 {
  color: #B0B5BD;
  cursor: default;
}

.c6 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c6 ::-ms-check {
  display: none;
}

.c6:disabled {
  cursor: default;
}

.c6:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c6:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c6:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:disabled:checked+div>span>svg {
  visibility: visible;
}

.c6:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c6:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c6:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c6:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c7 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c7 {
  width: 20px;
  height: 20px;
}

.c8 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c8.c8 {
  width: 32px;
  height: 32px;
}

.c9 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c9.c9 {
  width: 16px;
  height: 16px;
}

.c9 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c9.c9 *[fill^='#'] {
  fill: #E5E7EB;
}

.c10 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c5 {
  margin-right: 8px;
  flex-shrink: 0;
}

.c11 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <label
            class="c4 c5"
            data-field-id="1"
          >
            <input
              class="c6"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              />
              <span
                class="c9"
              >
                <div
                  aria-hidden="true"
                  class="c10"
                  focusable="false"
                />
              </span>
            </div>
          </label>
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <label
            class="c4 c5"
            data-field-id="2"
          >
            <input
              class="c6"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              />
              <span
                class="c9"
              >
                <div
                  aria-hidden="true"
                  class="c10"
                  focusable="false"
                />
              </span>
            </div>
          </label>
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c4 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c4.c4 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c4.c4 {
  color: #B0B5BD;
  cursor: default;
}

.c6 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c6 ::-ms-check {
  display: none;
}

.c6:disabled {
  cursor: default;
}

.c6:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c6:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c6:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:disabled:checked+div>span>svg {
  visibility: visible;
}

.c6:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c6:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c6:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c6:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c7 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c7 {
  width: 20px;
  height: 20px;
}

.c8 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c8.c8 {
  width: 32px;
  height: 32px;
}

.c9 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c9.c9 {
  width: 16px;
  height: 16px;
}

.c9 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c9.c9 *[fill^='#'] {
  fill: #E5E7EB;
}

.c10 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c5 {
  margin-right: 8px;
  flex-shrink: 0;
}

.c11 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <label
          class="c4 c5"
          data-field-id="1"
        >
          <input
            class="c6"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c7"
          >
            <div
              class="c8"
            />
            <span
              class="c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </span>
          </div>
        </label>
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <label
          class="c4 c5"
          data-field-id="2"
        >
          <input
            class="c6"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c7"
          >
            <div
              class="c8"
            />
            <span
              class="c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </span>
          </div>
        </label>
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectTree should render small components 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c4 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c4.c4 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c4.c4 {
  color: #B0B5BD;
  cursor: default;
}

.c6 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c6 ::-ms-check {
  display: none;
}

.c6:disabled {
  cursor: default;
}

.c6:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c6:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c6:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:disabled:checked+div>span>svg {
  visibility: visible;
}

.c6:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c6:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c6:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c6:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c7 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c7 {
  width: 20px;
  height: 20px;
}

.c8 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c8.c8 {
  width: 32px;
  height: 32px;
}

.c9 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 16px;
  height: 16px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c9.c9 {
  width: 16px;
  height: 16px;
}

.c9 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c9.c9 *[fill^='#'] {
  fill: #E5E7EB;
}

.c10 {
  visibility: hidden;
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 20px;
  height: 20px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 6px 16px 6px 0px;
}

.c5 {
  margin-right: 8px;
  flex-shrink: 0;
}

.c11 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <label
            class="c4 c5"
            data-field-id="1"
          >
            <input
              class="c6"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              />
              <span
                class="c9"
              >
                <div
                  aria-hidden="true"
                  class="c10"
                  focusable="false"
                />
              </span>
            </div>
          </label>
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <label
            class="c4 c5"
            data-field-id="2"
          >
            <input
              class="c6"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              />
              <span
                class="c9"
              >
                <div
                  aria-hidden="true"
                  class="c10"
                  focusable="false"
                />
              </span>
            </div>
          </label>
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c11"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c4 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c4.c4 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c4.c4 {
  color: #B0B5BD;
  cursor: default;
}

.c6 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c6 ::-ms-check {
  display: none;
}

.c6:disabled {
  cursor: default;
}

.c6:disabled:not(:checked)+div>span {
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

.c6:disabled:checked+div>span {
  border-color: #A7C7FF;
  background-color: #A7C7FF;
}

.c6:disabled:checked+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:disabled:checked+div>span>svg {
  visibility: visible;
}

.c6:checked:not(:disabled)+div>span {
  border-color: #0062FF;
  background-color: #0062FF;
}

.c6:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: #FFFFFF;
}

.c6:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c6:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c6:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c6:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c6:not(:disabled):active:not(:disabled)+div>div {
  background: #0000001F;
}

.c7 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c7 {
  width: 20px;
  height: 20px;
}

.c8 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background-color: #0000000D;
}

fieldset[data-dimension='s'] .c8.c8 {
  width: 32px;
  height: 32px;
}

.c9 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 4px;
  width: 16px;
  height: 16px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c9.c9 {
  width: 16px;
  height: 16px;
}

.c9 *[fill^='#'] {
  fill: #FFFFFF;
}

fieldset:disabled .c9.c9 *[fill^='#'] {
  fill: #E5E7EB;
}

.c10 {
  visibility: hidden;
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c3 {
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  transform: rotate(0deg);
}

.c3 path {
  fill: #717681;
}

.c2 {
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 20px;
  height: 20px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #23262D;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  display: flex;
  align-items: flex-start;
  padding: 6px 16px 6px 0px;
}

.c5 {
  margin-right: 8px;
  flex-shrink: 0;
}

.c11 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <label
          class="c4 c5"
          data-field-id="1"
        >
          <input
            class="c6"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c7"
          >
            <div
              class="c8"
            />
            <span
              class="c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </span>
          </div>
        </label>
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <label
          class="c4 c5"
          data-field-id="2"
        >
          <input
            class="c6"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c7"
          >
            <div
              class="c8"
            />
            <span
              class="c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </span>
          </div>
        </label>
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c11"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
